--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-8899434918779848~7330503607"/>
+            android:value="******"/>
 
         <activity android:name="com.berkay.firebasetest.ForgotPasswordActivity"
             android:screenOrientation="portrait"/>
